# FH-ECE20-patterns

./: CMakeLists.txt  README.rst
bin-trainee/: CMakeLists.txt
libtrainee/: CMakeLists.txt  sensor-A-adapter.h
tests-trainee/: CMakeLists.txt  adapter-suite.cpp
